Revert "corrected style of header dashboard for better alignment of counters"
This reverts commit b83f4a594f0fde1ed0ff350d66ca5eb7b0fb5748.

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -192,14 +192,14 @@ button {
 
 .counter-box {
   width: 5rem;
-  height: 5rem; }
-
-.counter-label {
-  margin-bottom: 1rem;
-  font-size: small; }
+  height: 5rem;
+  margin: 0; }
+  @media (min-width: 768px) {
+    .counter-box {
+      margin: 1rem; } }
   @media (min-width: 1024px) {
-    .counter-label {
-      margin-bottom: 0; } }
+    .counter-box {
+      margin: 2rem; } }
 
 .counter-value, .counter-text {
   font-family: "Open Sans", sans-serif;
@@ -635,9 +635,6 @@ button {
     padding: 5vh; }
   .dashboard-header {
     background-color: #8fc5bb80; }
-  @media (min-width: 1024px) {
-    .dashboard-counters {
-      margin: 5rem; } }
   .dashboard .counter-value {
     font-size: 0.8rem !important; }
   .dashboard .form-content {
