--- a/src/styles/sass/views/_dashboard.scss
+++ b/src/styles/sass/views/_dashboard.scss
@@ -10,14 +10,6 @@
     background-color: $faded-green-grey;
   }
 
-  &-counters {
-
-    @include tablet {
-      margin: 5rem;
-
-    }
-  }
-
   .counter-value {
     font-size: $font-08 !important;
   }
